--- a/Programmentwurf.ipynb
+++ b/Programmentwurf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -271,10 +271,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1a28dcf550>"
+       "<seaborn.axisgrid.FacetGrid at 0x1a205c0898>"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -466,15 +466,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 227.07\n",
-      "Variance score: 0.86\n"
+      "Mean squared error: 276.04\n",
+      "Variance score: 0.83\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -582,138 +582,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Teil 3: Nutzen Sie zwei Klassifikationsverfahren, um ein Fahrzeug bei sonstigen gegebenen Daten einer Zylinderzahl zuzuordnen"
+    "##### Writing Method to predict horsepower with values of 'mpg', 'cylinders', 'displacement', 'acceleration', 'origin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0    199\n",
-      "8.0    103\n",
-      "6.0     83\n",
-      "3.0      4\n",
-      "5.0      3\n",
-      "Name: cylinders, dtype: int64\n",
-      "    mpg  cylinders  displacement     hp  weight  acceleration  year  origin  \\\n",
-      "0  18.0        8.0         307.0  130.0  3504.0          12.0  70.0     1.0   \n",
-      "1  15.0        8.0         350.0  165.0  3693.0          11.5  70.0     1.0   \n",
-      "2  18.0        8.0         318.0  150.0  3436.0          11.0  70.0     1.0   \n",
-      "3  16.0        8.0         304.0  150.0  3433.0          12.0  70.0     1.0   \n",
-      "4  17.0        8.0         302.0  140.0  3449.0          10.5  70.0     1.0   \n",
-      "\n",
-      "                          name  \n",
-      "0  \"chevrolet chevelle malibu\"  \n",
-      "1          \"buick skylark 320\"  \n",
-      "2         \"plymouth satellite\"  \n",
-      "3              \"amc rebel sst\"  \n",
-      "4                \"ford torino\"  \n"
+      "Hello form horsepower predictor!\n",
+      "Please type in the mpg of your car:\n",
+      "18.8\n",
+      "Please type in the number of cylinders of your car:\n",
+      "8\n",
+      "Please type in the number of displacement of your car:\n",
+      "307\n",
+      "Please type in the acceleration of your car:\n",
+      "12\n",
+      "Please type in the origin of your car:\n",
+      "1\n",
+      "The horesepower for the given data is: \n",
+      "[[145.25018529]]\n",
+      "Here is the corresponding plot for your data:\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>hp</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>year</th>\n",
-       "      <th>origin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>20.8</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>3070.0</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>16.9</td>\n",
-       "      <td>155.0</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>4360.0</td>\n",
-       "      <td>14.9</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>2279.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>26.5</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>2565.0</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>232.0</td>\n",
-       "      <td>2945.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      mpg     hp  displacement  weight  acceleration  year  origin\n",
-       "266  20.8   85.0         200.0  3070.0          16.7  78.0     1.0\n",
-       "296  16.9  155.0         350.0  4360.0          14.9  79.0     1.0\n",
-       "115  20.0   88.0          97.0  2279.0          19.0  73.0     3.0\n",
-       "213  26.5   72.0         140.0  2565.0          13.6  76.0     1.0\n",
-       "106  18.0  100.0         232.0  2945.0          16.0  73.0     1.0"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "## [[18,8,307,3504.0,12,70,1]] => 130 horse power...\n",
+    "\n",
+    "def predict_horsepower(mpg, cylinders, displacement, acceleration, origin):\n",
+    "    hp = lr.predict([[mpg,cylinders,displacement,acceleration,origin]])\n",
+    "    print(\"The horesepower for the given data is: \")\n",
+    "    print(hp)\n",
+    "\n",
+    "print(\"Hello form horsepower predictor!\")\n",
+    "\n",
+    "print(\"Please type in the mpg of your car:\")\n",
+    "mpg = input()\n",
+    "\n",
+    "print(\"Please type in the number of cylinders of your car:\")\n",
+    "cylinders = input()\n",
+    "\n",
+    "print(\"Please type in the number of displacement of your car:\")\n",
+    "displacement = input()\n",
+    "\n",
+    "print(\"Please type in the acceleration of your car:\")\n",
+    "acceleration = input()\n",
+    "\n",
+    "print(\"Please type in the origin of your car:\")\n",
+    "origin = input()\n",
+    "\n",
+    "predict_horsepower(float(mpg), float(cylinders), float(displacement), float(acceleration), float(origin))\n",
+    "\n",
+    "print(\"Here is the corresponding plot for your data:\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Teil 3: Nutzen Sie zwei Klassifikationsverfahren, um ein Fahrzeug bei sonstigen gegebenen Daten einer Zylinderzahl zuzuordnen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Data Preperation\n",
     "print(df['cylinders'].value_counts())\n",
@@ -740,127 +679,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>hp</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>year</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>3504.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\"chevrolet chevelle malibu\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>3693.0</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\"buick skylark 320\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3436.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\"plymouth satellite\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3433.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\"amc rebel sst\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3449.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\"ford torino\"</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    mpg  cylinders  displacement     hp  weight  acceleration  year  origin  \\\n",
-       "0  18.0        8.0         307.0  130.0  3504.0          12.0  70.0     1.0   \n",
-       "1  15.0        8.0         350.0  165.0  3693.0          11.5  70.0     1.0   \n",
-       "2  18.0        8.0         318.0  150.0  3436.0          11.0  70.0     1.0   \n",
-       "3  16.0        8.0         304.0  150.0  3433.0          12.0  70.0     1.0   \n",
-       "4  17.0        8.0         302.0  140.0  3449.0          10.5  70.0     1.0   \n",
-       "\n",
-       "                          name  \n",
-       "0  \"chevrolet chevelle malibu\"  \n",
-       "1          \"buick skylark 320\"  \n",
-       "2         \"plymouth satellite\"  \n",
-       "3              \"amc rebel sst\"  \n",
-       "4                \"ford torino\"  "
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()\n",
     "# X_train, X_test, y_train, y_test\n",
@@ -869,20 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9285714285714286"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Predict cylinders via given values\n",
     "\n",
@@ -902,20 +712,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9693877551020408"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = MultinomialNB() #BernoulliNB() #MultinomialNB() #GaussianNB()\n",
     "predicted = model.fit(X_train, y_train.values.ravel())\n",
@@ -923,41 +722,6 @@
     "target_pred = model.predict(X_test)\n",
     "accuracy_score(y_test, target_pred)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Für Teile 2 und 3: Validieren und testen Sie Ihre Ergebnisse jeweils mit Evaluationsmethoden wie diese bei Data Science Projekten üblich sind. Stellen Sie jeweils die Ergebnisse Ihrer Verfahren vergleichend optisch dar und beschreiben Sie das jeweilige Endergebnis. Diskutieren Sie, für welche Lösung Sie sich entscheiden. Optimieren Sie in einer bis maximal drei Iteration(en) die gewählte Lösung. Kommentieren Sie ggfs., welche weiteren Möglichkeiten zur Verbesserung Sie noch anwenden könnten. Erstellen Sie eine Methode, mit der man die Daten, für die eine Vorhersage getroffen werden soll, manuell eingeben kann, und diese einem das Resultat liefert und auch optisch sinnvoll anzeigt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Validieren --> Validiersungsset\n",
-    "# optisch darstellen\n",
-    "# Für ein Verfahren entscheiden\n",
-    "# Optimieren: Anzahl Schritte, Eingabevariablen, Parameter, Anzahl Eingangsdimensionen verändern\n",
-    "# Methode schreiben\n",
-    "# Kommentare hinzufügen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
