--- a/Programmentwurf.ipynb
+++ b/Programmentwurf.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,12 +612,13 @@
     }
    ],
    "source": [
-    "## [[18,8,307,3504.0,12,70,1]] => 130 horse power...\n",
+    "# example: [[18,8,307,12,1]] => 130 hp\n",
     "\n",
     "def predict_horsepower(mpg, cylinders, displacement, acceleration, origin):\n",
     "    hp = lr.predict([[mpg,cylinders,displacement,acceleration,origin]])\n",
     "    print(\"The horesepower for the given data is: \")\n",
     "    print(hp)\n",
+    "    return hp\n",
     "\n",
     "print(\"Hello form horsepower predictor!\")\n",
     "\n",
@@ -636,9 +637,7 @@
     "print(\"Please type in the origin of your car:\")\n",
     "origin = input()\n",
     "\n",
-    "predict_horsepower(float(mpg), float(cylinders), float(displacement), float(acceleration), float(origin))\n",
-    "\n",
-    "print(\"Here is the corresponding plot for your data:\")\n"
+    "hp = predict_horsepower(float(mpg), float(cylinders), float(displacement), float(acceleration), float(origin))\n"
    ]
   },
   {
