Add comments, for my friend

--- a/Programmentwurf.ipynb
+++ b/Programmentwurf.ipynb
@@ -592,8 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data Preperation\n",
-    "#print(df['cylinders'].value_counts())\n",
+    "# Reading in data and splitting into test / training sets\n",
     "\n",
     "df_x = df[['mpg', 'hp', 'displacement', 'weight', 'acceleration', 'year', 'origin']]\n",
     "df_y = df[['cylinders']]\n",
@@ -620,7 +619,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.scatter(df_x.hp,df_x.weight,c=df_y.cylinders)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "# best guess plot of things that might relate to the amount of cylinders\n",
+    "# Plot shows some overlays"
    ]
   },
   {
@@ -641,7 +642,8 @@
    ],
    "source": [
     "plt.scatter(df_x.hp,df_x.displacement,c=df_y.cylinders)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# new best guess, plot shows almost perfect distingution"
    ]
   },
   {
@@ -668,12 +670,14 @@
     }
    ],
    "source": [
-    "# Predict cylinders via given values\n",
+    "# Predict cylinders with all given features\n",
     "\n",
     "model = KNeighborsClassifier(n_neighbors=3)\n",
     "model.fit(X_train, y_train.values.ravel())\n",
     "\n",
     "target_pred = model.predict(X_test)\n",
+    "\n",
+    "# Caluclating accuracy of classification\n",
     "accuracy_score(y_test, target_pred)"
    ]
   },
@@ -700,6 +704,8 @@
     "model.fit(X_train[['hp', 'displacement']], y_train.values.ravel())\n",
     "\n",
     "target_pred = model.predict(X_test[['hp', 'displacement']])\n",
+    "\n",
+    "# Calculate Accuracy, even better - improvement worked\n",
     "accuracy_score(y_test, target_pred)"
    ]
   },
@@ -764,6 +770,9 @@
     }
    ],
    "source": [
+    "# For alternative prediction use Naive Bayes, choose Multinomial Distribution since \n",
+    "# it gives the best accuracy\n",
+    "\n",
     "model = MultinomialNB() #BernoulliNB() #MultinomialNB() #GaussianNB()\n",
     "predicted = model.fit(X_train, y_train.values.ravel())\n",
     "\n",
